# CPU-V

./: '  .gitignore  .info.txt  Cargo.toml  LICENSE  README.md  TODOS.md  file.asm  rustc-ice-2024-12-21T01_21_18-151288.txt  rustc-ice-2024-12-21T01_21_18-151306.txt  rustc-ice-2024-12-21T01_21_34-152473.txt  rustc-ice-2024-12-21T01_21_34-152491.txt  rustc-ice-2024-12-21T01_22_01-158240.txt  rustc-ice-2024-12-21T01_22_01-158258.txt  test_file.asm  test_file.cv
.github/workflows/: ci.yml  rust.yml
config/: default-config.toml
cpuv/: Cargo.toml
cpuv/src/: config.rs  main.rs
cpuv/src/core/engine/: engine.rs  runner.rs
cpuv/src/ui/: app.rs  center_pannel.rs  log.rs  sidebar.rs  text_editor.rs  visual.rs  window.rs
docs/: Todo and Bugs.md  book.toml  refs.md
example/: default-config.toml
examples/: example.irv
ir-core/: Cargo.toml
ir-core/src/: parser.rs
irv/: Cargo.toml
irv/IR-V/: Cargo.toml
irv/IR-V/src/: parser.rs
irv/docs/: book.toml
irv/src/: types.rs
scripts/: build_demo_web.sh
src/: config.rs  main.rs
src/core/: core.rs  engine.rs  mod.rs  parser.rs  runner.rs  types.rs
src/core/IR/: parser.rs  translate.rs
src/core/engine/: engine.rs  instructions.md  mod.rs  runner.rs
src/core/lang/: parser.rs  types.rs
src/ui/: app.rs  log.rs  mod.rs  sidebar.rs  text_editor.rs  visual.rs  widgets.rs  window.rs
