[package]
name = "cpuv"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
egui-file-dialog = "0.8.0"
egui_code_editor = "0.2.11"
egui_extras = "0.30.0"
env_logger = "0.11.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

[profile.release]
opt-level = 3
