[package]
name = "cpuv"
authors = ["Benjamin Cassidy"]
license = "MIT"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/BenCassidy33/CPU-V"

[dependencies]
chrono = "0.4.39"
eframe = "0.30.0"
egui = "0.30.0"
egui-file-dialog = "0.8.0"
egui_code_editor = "0.2.11"
egui_extras = "0.30.0"
env_logger = "0.11.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
strum = { version = "0.26.3", features = ["derive"] }

[profile.release]
opt-level = 3
