[package]
name = "cpuv"
authors = ["Benjamin Cassidy"]
license = "MIT"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
readme = "README.md"
repository = "https://github.com/BenCassidy33/CPU-V"

[dependencies]

irv = { version = "0.1.0", path = "../irv" }

chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }

eframe = { version = "0.30.0", features = ["web_screen_reader"] }
egui = "0.30.0"
egui-file-dialog = "0.8.0"
egui_code_editor = "0.2.11"
egui_extras = "0.30.0"

serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
strum = { version = "0.26.3", features = ["derive"] }

toml = "0.8.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.99"
web-sys = "^0.3.76"
